# DeepBio_Edge_v2

./: .gitignore  agents.md  pyproject.toml
configs/: main.yaml
src/cloud/: debug_schema.py  debug_specific.py  embed_sequences.py  enrich_with_dna.py  fetch_obis.py
src/edge/: database.py  embedder.py  load_demo.py  taxonomy.py
src/interface/: app.py
src/utils/: config.py
